--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-date-picker": "^7.10.0",
     "react-dom": "16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "semantic-ui-react": "^0.88.2",
     "web3": "1.2.2"
   },
   "scripts": {
