--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-date-picker": "^7.10.0",
     "react-dom": "16.11.0",
+    "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "semantic-ui-react": "^0.88.2",
