--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "react": "16.11.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-date-picker": "^7.10.0",
